--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
     <img src="https://avatars.githubusercontent.com/u/83956215?v=4" alt="Foto de Perfil">
     <div class="name">Ricardo Cremonez</div>
     <div class="role">Especialista em testes | QA Senior</div>
-    <div class="area"> Automação de testes</div>
+    <div class="area">Automação de testes</div>
     <div><a href="mailto:novoa.lopez@gmail.com">novoa.lopez@gmail.com</a></div>
     <hr style="margin: 20px 0;">
     <div>Mais informações:</div>
-    <div class="icons">
-      <a href="https://www.linkedin.com/in/ricardocremonez/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/cremope" target="_blank"><i class="fab fa-github"></i></a>
+      <div class="mb-6 pb-3">
+        <a title="LinkedIn" href="https://www.linkedin.com/in/ricardocremonez/" target="_blank"><i class="fa fa-linkedin fa-lg me-3"></i></a>
+        <a title="GitHub" href="https://github.com/cremope" target="_blank"><i class="fa fa-github fa-lg me-3"></i></a>
+      </div>
     </div>
-  </div>
 </body>
 </html>
